--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
   "include": ["src", "types"],
+  "lib": [
+    "dom",
+    "dom.iterable",
+    "esnext"
+  ],
   "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "experimentalDecorators": true,
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
